--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-sei-111-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a initializing starting point for making an API.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -17,6 +17,16 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.18",
-    "node-fetch": "^2.6.1"
-  }
+    "node-fetch": "^2.6.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SophiaDipaola/mern-auth-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SophiaDipaola/mern-auth-backend/issues"
+  },
+  "homepage": "https://github.com/SophiaDipaola/mern-auth-backend#readme"
 }
